# plowshare-module-mega

./: .gitignore  INSTALL  Makefile  Makefile.am  README.md  autogen.sh  configure.ac
module/: Makefile.am  config  mega.sh
src/: Makefile.am  crypto.c
